// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a scale Setter component 1`] = `
<div
  class="scale-setter"
  data-testid="scale-setter"
>
  <button
    aria-description="button.ariaDescription"
    aria-haspopup="menu"
    aria-label="button.ariaLabel"
    class="chakra-button chakra-menu__trigger scale-setter-menubutton css-12690gz"
    data-part="trigger"
    data-scope="menu"
    data-state="closed"
    data-uid="«r0»"
    dir="ltr"
    id="menu:«r0»:trigger"
    type="button"
  >
    1 : 336,409
    <svg
      aria-hidden="true"
      class="chakra-icon css-1qiwd9j"
      fill="none"
      focusable="false"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
</div>
`;

exports[`should successfully create a scale setter component with additional css classes and box properties 1`] = `
<div
  class="scale-setter test test1 test2"
  data-testid="scale-setter"
>
  <button
    aria-description="button.ariaDescription"
    aria-haspopup="menu"
    aria-label="button.ariaLabel"
    class="chakra-button chakra-menu__trigger scale-setter-menubutton css-12690gz"
    data-part="trigger"
    data-scope="menu"
    data-state="closed"
    data-uid="«r1»"
    dir="ltr"
    id="menu:«r1»:trigger"
    type="button"
  >
    1 : 336,409
    <svg
      aria-hidden="true"
      class="chakra-icon css-1qiwd9j"
      fill="none"
      focusable="false"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </button>
</div>
`;
